updated member page (about)

--- a/application/modules/default/views/scripts/user/about.phtml
+++ b/application/modules/default/views/scripts/user/about.phtml
@@ -195,7 +195,7 @@ if ($paginationComments) {
                                 <?php if (false === empty($this->member['link_google'])): ?>
                                     <div class="info-social">
                                         <div class="text">
-                                            <i class="fa fa-google-plus-official" aria-hidden="true" style="color:#000; width: 20px;"></i>
+                                            <i class="fa fa-google" aria-hidden="true" style="color:#000; width: 20px;"></i>
                                             <a href="<?php echo $this->member['link_google']; ?>" target="_NEW"><?php echo $helpTruncate->truncate($this->member['link_google'],50); ?></a>
                                         </diV>
                                     </div>
@@ -238,7 +238,7 @@ if ($paginationComments) {
                         </div>
                     </div>
                     <?php endif; ?>
-                    
+
                 </div>
             </div>
         </div>
