--- a/application/modules/default/views/scripts/user/partials/loopContributedProducts.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopContributedProducts.phtml
@@ -23,7 +23,7 @@
 $helperImage = new Default_View_Helper_Image();
 foreach (array_keys($this->contributedProjects) as $cat):?>
     <div class="cat-title col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <div style="line-height: 0.1em;border-bottom:1px solid #f1f1f1; width:100%; text-align: left; margin-bottom:20px">
+        <div style="line-height: 0.1em;border-bottom:1px solid #f1f1f1; width:100%; text-align: left; margin-bottom:20px; margin-top: 10px;">
             <span style="font-size:24px; font-weight:bold;background-color: white;padding-right:10px;"><?= $cat ?></span>
         </div>
     </div>
