updated member page (about)

--- a/application/modules/default/views/scripts/partials/paginationControlBootstrap.phtml
+++ b/application/modules/default/views/scripts/partials/paginationControlBootstrap.phtml
@@ -26,9 +26,11 @@ if (false === isset($this->params)) {
 ?>
 <ul class="pagination pagination-sm" style="margin: 0;padding:0;">
     <li class="<?php echo isset($this->previous) ? '' : 'disabled' ?>">
-        <a class="<?php echo isset($this->previous) ? 'paginationPartial' : '' ?>" href="<?php echo isset($this->previous) ? $this->url(array_merge($this->params,
-            array('page' => $this->previous))) : 'javascript:;'; ?>"><span
-                class="glyphicon glyphicon-chevron-left"></span></a></li>
+        <a class="<?php echo isset($this->previous) ? 'paginationPartial' : '' ?>"
+           href="<?php echo isset($this->previous) ? $this->url(array_merge($this->params, array('page' => $this->previous))) : 'javascript:;'; ?>">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+    </li>
 
     <?php foreach ($this->pagesInRange as $page): ?>
         <?php if ($page != $this->current): ?>
@@ -39,13 +41,15 @@ if (false === isset($this->params)) {
     <?php endforeach; ?>
 
     <li class="<?php echo isset($this->next) ? '' : 'disabled' ?>">
-        <a class="<?php echo isset($this->next) ? 'paginationPartial' : ''?>" href="<?php echo isset($this->next) ? $this->url(array_merge($this->params,
-            array('page' => $this->next))) : 'javascript:;'; ?>"><span class="glyphicon glyphicon-chevron-right"></span></a></li>
+        <a class="<?php echo isset($this->next) ? 'paginationPartial' : ''?>"
+           href="<?php echo isset($this->next) ? $this->url(array_merge($this->params, array('page' => $this->next))) : 'javascript:;'; ?>">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
+    </li>
 </ul>
 <script type="application/javascript">
     $(document).ready(function () {
         $('body').on('click', 'ul.pagination a.paginationPartial', function (event) {
-
             event.preventDefault();
             var target = '<?=$this->dom_target?>';
             var url = $(this).attr("href") + ' ' + target + ' > *';                       
