--- a/application/modules/default/views/scripts/user/partials/loopMyComments.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopMyComments.phtml
@@ -31,8 +31,9 @@ $helperPrintDate = new Default_View_Helper_PrintDate();
     <small class="pull-right">
         <div class="row rownomargin rownopadding pull-right"><?=$this->comments->getTotalItemCount()?> comments</div>
         <?php
-        if ($pageCount > 1)
+        if ($pageCount > 1) {
             echo $this->paginationControl($this->comments, 'Sliding', '/partials/paginationControlBootstrap.phtml', array('params' => array(), 'dom_target' => 'div#my-comments-tabs-content'));
+        }
         ?>
     </small>        
     <?php foreach ($this->comments as $elementComment): ?>
