--- a/application/modules/default/views/scripts/button/partials/button.phtml
+++ b/application/modules/default/views/scripts/button/partials/button.phtml
@@ -24,15 +24,18 @@ $target = '';
 if (isset($this->config['target'])) {
     $target = ' target = ' . $this->config['target'];
 }
-
-$url = '/p/' . $this->projectId;
+$helpBuildUrl = new Default_View_Helper_BuildProductUrl();
+$url = $helpBuildUrl->buildProductUrl($this->projectId);
 
 $htmlCode = '<div class="plingbutton new-button"><a href="' . $url . '" ' . $target . '></a></div>';
 
 if (isset($this->config['attribute']) AND $this->config['attribute'] == 'disabled') {
-    $htmlCode = '<div class="btn btn-native plingbutton"><button disabled>
-							<span>' . $this->view->translate('pling.button.no_paypal') . '</span>
-                    </button></div>';
+    $htmlCode = '
+<div class="btn btn-native plingbutton">
+    <button disabled>
+        <span>' . $this->view->translate('pling.button.no_paypal') . '</span>
+    </button>
+</div>';
 }
 
 echo $htmlCode;
