--- a/application/modules/default/views/scripts/explore/partials/comment.phtml
+++ b/application/modules/default/views/scripts/explore/partials/comment.phtml
@@ -19,6 +19,7 @@
  *    You should have received a copy of the GNU Affero General Public License
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  **/
+$helpProductUrl = new Default_View_Helper_BuildProductUrl();
 $helpMemberUrl = new Default_View_Helper_BuildMemberUrl();
 $helpImage = new Default_View_Helper_Image();
 $helpCategories = new Default_View_Helper_FetchCategoriesForProductAsString();
@@ -40,7 +41,7 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
 		</div>
 		<div class="info">
 			<div class="small" style="line-height:1.3">
-                <a href="/p/<?= $this->comment['project_id'] ?>">
+                <a href="<?=$helpProductUrl->buildProductUrl($this->comment['project_id'])?>">
 					<?=$helpTruncate->truncate(strip_tags($this->comment['comment_text'],' '), 200, '...', false, true)?>
 				</a>
 			</div>
