--- a/application/modules/default/views/scripts/user/about.phtml
+++ b/application/modules/default/views/scripts/user/about.phtml
@@ -58,6 +58,15 @@ if ($paginationComments) {
         border-bottom: 1px solid #e1e1e1;
         margin-bottom: 0.5em;
     }
+    .profile-nav {
+        color: #4e4e4e
+    }
+    .profile-nav .profile-label {
+        color: #4e4e4e
+    }
+    .profile-nav .profile-value {
+        font-size: 75%;
+    }
 </style>
 <main class="about-me-page">
 
@@ -72,9 +81,25 @@ if ($paginationComments) {
                     <div style="border-radius: 50%;width: 6.9em;height:6.9em;overflow: hidden;border: 4px solid white;background-color: white;float: left;">
                         <img src="<?=$this->member['profile_image_url']?>" style="height:6.8em;width:6.8em;"/>
                     </div>
-                    <div style="transform: translateY(20px);">
+                    <div style="transform: translateY(20px);padding-left: 7.5em;">
                         <h1><?=$this->member['username']?></h1>
                     </div>
+                    <div style="transform: translateY(20px);">
+                        <ul class="nav nav-pills profile-nav">
+                            <li role="presentation"><span class="label center-block profile-label">Products</span><span class="center center-block profile-value"><?=count($this->userProducts->toArray())?></span></li>
+                            <li role="presentation"><span class="label center-block profile-label">Comments</span><span class="center center-block profile-value"><?=$this->comments->getTotalItemCount()?></span></li>
+                            <li role="presentation"><span class="label center-block profile-label">Page views</span><span class="center center-block profile-value"><?=$this->cntPageViewsOverall?></span></li>
+                            <li role="presentation"><span class="label center-block profile-label">Supporters</span><span class="center center-block profile-value"><?=$this->cntSupporter?></span></li>
+                            <li role="presentation"><span class="label center-block profile-label">Last time active</span><span class="center center-block profile-value"><?=$helpPrintDate->printDate($this->lastActiveTime)?></span></li>
+                            <li role="presentation"><span class="label center-block profile-label">Joined</span><span class="center center-block profile-value"><?=$helpPrintDate->printDate($this->member['created_at']);?></span></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-3"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
                 </div>
                 <div class="col-md-3"></div>
             </div>
