--- a/application/modules/default/views/scripts/user/about.phtml
+++ b/application/modules/default/views/scripts/user/about.phtml
@@ -75,9 +75,9 @@ if ($paginationComments) {
         <!-- HEADER -->
         <div style="height:400px;background-image: url(/images/system/1-opendesktop-bg.png); background-position: bottom 0px left 0px;">&nbsp;</div>
         <div class="container-fluid">
-            <div class="row" style="transform: translateY(-40px);">
-                <div class="col-md-3"></div>
-                <div class="col-md-6">
+            <div class="row-fluid" style="transform: translateY(-40px);">
+                <div class="col-xs-1 col-sm-1 col-md-3"></div>
+                <div class="col-xs-10 col-sm-10 col-md-7">
                     <div style="border-radius: 50%;width: 6.9em;height:6.9em;overflow: hidden;border: 4px solid white;background-color: white;float: left;">
                         <img src="<?=$this->member['profile_image_url']?>" style="height:6.8em;width:6.8em;"/>
                     </div>
@@ -95,13 +95,7 @@ if ($paginationComments) {
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-3"></div>
-            </div>
-            <div class="row">
-                <div class="col-md-3"></div>
-                <div class="col-md-6">
-                </div>
-                <div class="col-md-3"></div>
+                <div class="col-xs-1 col-sm-1 col-md-2"></div>
             </div>
         </div>
 
