--- a/application/modules/default/views/scripts/user/about.phtml
+++ b/application/modules/default/views/scripts/user/about.phtml
@@ -47,8 +47,23 @@ if ($paginationComments) {
 
 ?>
 <style>
-    .info-social{
+    .info-social {
         margin-top: .5em;
+    }
+    .info-stat, .info-text {
+        margin-top: .3em;
+    }
+    .badge-info {
+        background-color: #3a87ad;
+    }
+    .badge-primary {
+        background-color: #337ab7;
+    }
+    .badge-super {
+        vertical-align: super;
+    }
+    .badge {
+        margin-left: .3em;
     }
     .details h3 {
         line-height: 2em;
@@ -82,7 +97,7 @@ if ($paginationComments) {
                         <img src="<?=$this->member['profile_image_url']?>" style="height:6.8em;width:6.8em;"/>
                     </div>
                     <div style="transform: translateY(20px);padding-left: 7.5em;">
-                        <h1><?=$this->member['username']?></h1>
+                        <h1><?=$this->member['username']?><span class="badge badge-primary badge-super">C xx</span><span class="badge badge-info badge-super">P xx</span></h1>
                     </div>
                     <div style="transform: translateY(20px);">
                         <ul class="nav nav-pills profile-nav">
@@ -156,12 +171,28 @@ if ($paginationComments) {
                 </div>
                 <div class="col-lg-4 col-md-4 col-xs-12" style="margin-top: 3em;">
 
+                    <div class="col-container">
+                        <div class="well details about">
+                            <h3>Contribution</h3>
+
+                            <div class="box-content">
+                                <div class="info-text">
+                                    I am xxx and my goal is to xxx.
+                                </div>
+                                <div class="info-text">
+                                    <button type="button" class="btn btn-warning btn-sm"><span class="glyphicon glyphicon-usd"></span> pling me</button>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
                     <?php if (false === empty($this->mainProject['description'])): ?>
                     <div class="col-container">
                         <div class="well details about">
                             <h3>About me</h3>
 
-                            <div>
+                            <div class="box-content">
                                 <?php echo nl2br(strip_tags($this->mainProject['description'])); ?>
                             </div>
                         </div>
@@ -169,7 +200,7 @@ if ($paginationComments) {
                     <?php endif; ?>
 
                     <div class="col-container">
-                        <div class="well details">
+                        <div class="well details about">
                             <h3>Connected Acounts</h3>
 
                             <div class="box-content">
@@ -230,23 +261,23 @@ if ($paginationComments) {
                         <div class="well details about">
                             <h3>Statistics</h3>
 
-                            <div  class="statContent" >
-                                <div class="row ">
+                            <div class="box-content">
+                                <div class="info-stat">
                                     <span class="cnt"><?=count($this->userProducts->toArray())?> </span> Products
                                 </div>
-                                <div class="row">
+                                <div class="info-stat">
                                     <span class="cnt"><?=$this->comments->getTotalItemCount()?> </span> Comments
                                 </div>
-                                <div class="row">
+                                <div class="info-stat">
                                     <span class="cnt"><?=$this->cntPageViewsOverall?> </span> Pageviews
                                 </div>
-                                <div class="row">
+                                <div class="info-stat">
                                     <span class="cnt"><?=$this->cntSupporter?> </span> Supporters
                                 </div>
-                                <div class="row">
+                                <div class="info-stat">
                                     <span class="">Last time active : <?=$helpPrintDate->printDate($this->lastActiveTime)?> </span>
                                 </div>
-                                <div class="row">
+                                <div class="info-stat">
                                     <span class="text">Joined : <?=$helpPrintDate->printDate($this->member['created_at']);?></span>
                                 </div>
                             </div>
@@ -259,9 +290,9 @@ if ($paginationComments) {
                     $userRoleName = $helperUserRole->userRole();
                     if (Default_Model_DbTable_MemberRole::ROLE_NAME_ADMIN == $userRoleName) : ?>
                         <div class="col-container">
-                            <div class="well details">
+                            <div class="well details about">
                                 <h3>Admin Panel</h3>
-                                <div>
+                                <div class="box-content">
                                     <div><a id="linktohive" target="_blank" href="http://cp1.hive01.com/usermanager/search.php?username=<?= $this->member['username'] ?>">link to hive</a></div>
                                     <div><a id="delete-this" href="/backend/user/delete?member_id=<?= $this->member['member_id'] ?>">delete user</a></div>
                                     <script>
