updated member page (about)

--- a/application/modules/default/views/scripts/user/partials/loopProductEarnings.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopProductEarnings.phtml
@@ -62,8 +62,8 @@ $helpProductUrl = new Default_View_Helper_BuildProductUrl();
 
             <div class="col-lg-7 col-md-2 col-sm-2 col-xs-2" >
                 <div style="padding-left: 50px">
-                <a href="<?=$helpProductUrl->buildProductUrl($element->project_id)?>"><img src="<?php echo $helperImage->Image($element->image_small, array('width' => 80, 'height' => 80)); ?>" style="max-width: 80px; max-height: 80px"/></a>
-                <a href="<?=$helpProductUrl->buildProductUrl($element->project_id)?>"> <span class="" style="padding-left: 20px"><?php echo $element->title; ?></span></a>
+                <a href="<?=$helpProductUrl->buildProductUrl($element->project_id, '', null, true)?>"><img src="<?php echo $helperImage->Image($element->image_small, array('width' => 80, 'height' => 80)); ?>" style="max-width: 80px; max-height: 80px"/></a>
+                <a href="<?=$helpProductUrl->buildProductUrl($element->project_id, '', null, true)?>"> <span class="" style="padding-left: 20px"><?php echo $element->title; ?></span></a>
                 </div>
             </div>
            
