--- a/application/modules/default/views/scripts/user/partials/aboutProducts.phtml
+++ b/application/modules/default/views/scripts/user/partials/aboutProducts.phtml
@@ -6,7 +6,7 @@
     foreach ($this->userProducts as $product): ?>
         <div class="product mini-card col-lg-2 col-md-2 col-sm-3 col-xs-2">
             <div class="u-wrap">
-                <a href="<?= $helperBuildProductUrl->buildProductUrl($product['project_id']); ?>">
+                <a href="<?= $helperBuildProductUrl->buildProductUrl($product['project_id'], '', null, true); ?>">
                     <figure>
                         <img src="<?php echo $helperImage->Image($product['image_small'], array('width' => 280, 'height' => 171)); ?>"
                              class="explore-product-image" width="101" height="81" />
