--- a/application/modules/default/views/scripts/settings/index.phtml
+++ b/application/modules/default/views/scripts/settings/index.phtml
@@ -104,8 +104,13 @@ $this->tab = 'settings';
                                 <?php echo $this->render('settings/partials/accounts.phtml'); ?>
                             </section>
                             <!-- /edit connected accounts -->
-                            <!-- edit connected -->
+                            <!-- edit avatar -->
                             <section class="panel panel-default" id="form-picture">
+                                <?php echo $this->render('settings/partials/picture.phtml'); ?>
+                            </section>
+                            <!-- /edit avatar -->
+                            <!-- edit picture -->
+                            <section class="panel panel-default" id="form-header-picture">
                                 <?php echo $this->render('settings/partials/picture.phtml'); ?>
                             </section>
                             <!-- /edit picture -->
@@ -133,6 +138,7 @@ $this->tab = 'settings';
                         </div>
                         <!-- /settings main -->
                     </div>
+
                 </section>
                 <!-- /PAGE BODY -->
 
